crates/vihaco-parser/tests/compile_errors/pattern_type_requires_explicit.rs
// SPDX-FileCopyrightText: 2026 The vihaco Authors
// SPDX-License-Identifier: MIT

use vihaco_parser::Parse;

#[derive(Parse)]
#[syntax_class(type)]
struct Type(i64);

fn main() {}
